[gd_scene load_steps=5 format=3 uid="uid://ubkemjjkbxqm"]

[ext_resource type="Script" path="res://Scripts/NPC_scripts/veronica_npc_scenes.gd" id="1_mtwf1"]
[ext_resource type="Texture2D" uid="uid://dhovwhb8hplhu" path="res://Assets/Map_Art/Soldier_Barracks/Soldier_Barrack_Morning.png" id="2_t73hy"]
[ext_resource type="Texture2D" uid="uid://cg1wdt37ff1eh" path="res://Assets/NPC_Art/Veronica_Art/Veronica_Face_00_Smile.png" id="3_aeh7h"]
[ext_resource type="AudioStream" uid="uid://cal5b6fk7dk8n" path="res://Music/Veronica_Music.mp3" id="4_3wxub"]

[node name="veronica_npc_scenes" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mtwf1")

[node name="Bg" type="Sprite2D" parent="."]
z_index = -100
position = Vector2(574, 324)
scale = Vector2(0.904688, 0.936111)
texture = ExtResource("2_t73hy")

[node name="Body_Veronica" type="Sprite2D" parent="."]
position = Vector2(-651, 388)
scale = Vector2(0.6, 0.6)
texture = ExtResource("3_aeh7h")

[node name="DialogueHolder" type="ColorRect" parent="."]
z_index = 10
layout_mode = 0
offset_left = 40.0
offset_top = 396.0
offset_right = 1104.0
offset_bottom = 627.0
color = Color(0.160784, 0.160784, 0.160784, 0.815686)

[node name="Next_Button" type="Button" parent="DialogueHolder"]
layout_mode = 0
offset_left = 932.0
offset_top = 172.0
offset_right = 1108.0
offset_bottom = 253.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 46
text = "Next"

[node name="RichTextLabel" type="RichTextLabel" parent="DialogueHolder"]
layout_mode = 0
offset_left = 13.0
offset_top = 9.0
offset_right = 1056.0
offset_bottom = 192.0
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/normal_font_size = 28
bbcode_enabled = true
text = "hiii"

[node name="VeronicaMusic" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_3wxub")
volume_db = 11.0
pitch_scale = 1.1

[connection signal="button_up" from="DialogueHolder/Next_Button" to="." method="_on_next_button_button_up"]
